--- a/cinemustAcceuil.css
+++ b/cinemustAcceuil.css
@@ -23,10 +23,14 @@ img {
         padding: 15px;
     }
 }
-
+h1 {
+    font-family: 'Cinzel', serif;
+    color: #f2d48f; /* optionnel : couleur or clair */
+}
 @media screen and (max-width: 480px) {
     body {
         padding: 5px;
     }
 
 }
+
