--- a/Projet Films EYLON Nathan/cinemustAcceuil.css
+++ b/Projet Films EYLON Nathan/cinemustAcceuil.css
@@ -18,7 +18,7 @@ body {
 body { font-family: 'Lato', sans-serif; }
 
 #titre-principal {
-    font-family: "Cinzel Decorative", serif;
+    font-family: serif;
     color: #ffd6ff;
     text-align: center;
     margin-bottom: 30px;
